fix: Adjust navigation icons to -16px when collapsed
- Changed margin-top from -15px to -16px
- Navigation icons now move up 16px total when sidebar is collapsed

--- a/src/components/layout/MainSidebar/MainSidebar.scss
+++ b/src/components/layout/MainSidebar/MainSidebar.scss
@@ -134,7 +134,7 @@
 
   // Ajustar posición de navegación cuando está colapsada
   &--collapsed &__nav {
-    margin-top: -15px;
+    margin-top: -16px;
   }
 
   &__secondary {
